# the-lab

./: .gitignore  PROJECT_OVERVIEW.md  README.md
backend/: README.md  go.mod
backend/cmd/server/: main.go
backend/internal/k8s/: provisioner.go
backend/internal/pty/: multiplexer.go
backend/internal/signaling/: webrtc_hub.go
core/: CMakeLists.txt  README.md
core/src/: main.cpp
core/src/buffer/: piece_table.h
core/src/crdt/: crdt_engine.h
core/src/platform/: window_manager.h
core/src/render/: gpu_pipeline.h
infra/: README.md
infra/devcontainers/: Dockerfile.base
infra/k8s-manifests/: backend-deployment.yaml
shared/: README.md
shared/schemas/: crdt.fbs
web/: README.md
